Fixes #6049 - Default provider [files] section always executed (#6051)
* Fixes #6049 - Default provider [files] section always executed

Keeping only enabled modules when processing the modules,
so that default provider modules don't get processed.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>